# multi_agent_storywriter

./: README.md  app.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
lorebooks/: ElderScrolls_Skyrim.md
parent_docs_store/: 0c4c393a-5f96-465e-8d73-2c95076a43a3  37afae6c-3887-45ed-a5a3-50888fc2778a  5e0080a2-bfbb-4aff-9114-5968676b4bfe  758c0f70-7c6e-4224-b741-a1efeb909143  7d39b7cd-c08a-4859-8997-531a08a71aa0  888f55e1-909c-4b43-8e30-6c303bef2578  8d103883-ac13-40ec-859f-94e2fb223fe5  c5ba3601-994d-48c2-8cd5-23b82d2529a1  cf42c43e-f6ce-4d4f-a92c-5ac72c22d3c4  d08e59ae-8dc8-476e-a5b7-1d2493b73c3b  d620a6b2-5738-4f2e-af60-838d2a6e9a8a  e79599a8-7595-413c-9ecd-3b0a4a6bad6d  f80a66ac-0009-499f-9ac3-169775b44944
src/: graph.py
src/agents/: __init__.py  base.py  director.py  request_parser.py  story_writer.py
src/agents/tools/: search_lorebook.py
src/schemas/: state.py
src/utils/: prompt_loader.py  split_and_store_to_vector_db.py
system_prompts/: director.md  story_writer.md
tests/: test_base_agent.py  test_director.py  test_graph.py  test_prompt_loader.py  test_request_parser.py  test_story_writer.py
