[project]
name = "multi-agent-storywriter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
